// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChatIcon component should render with custom props 1`] = `
<div>
  <div
    className="letstalk-ChatIconContainer"
  >
    <styled.button
      height={50}
      margin="0px 10px 0px 0px"
      type="circle"
      width={50}
    >
      <styled.span />
      <MdChat
        color="white"
        size={20}
      />
    </styled.button>
  </div>
</div>
`;

exports[`ChatIcon component should render with no props 1`] = `
<div>
  <div
    className="letstalk-ChatIconContainer"
  >
    <styled.button
      height={50}
      margin=""
      type="rounded"
      width={250}
    >
      <styled.span />
      <MdChat
        color="white"
        size={20}
      />
    </styled.button>
  </div>
</div>
`;
